# chromiumoxide

./: Cargo.toml
.github/workflows/: ci.yml
chromiumoxide_cdp/: Cargo.toml
chromiumoxide_cdp/src/: lib.rs
chromiumoxide_cdp/tests/: generate.rs
chromiumoxide_fetcher/: Cargo.toml
chromiumoxide_fetcher/src/: lib.rs
chromiumoxide_fetcher/src/browser/: zip.rs
chromiumoxide_fetcher/tests/: verify.rs
chromiumoxide_pdl/: Cargo.toml
chromiumoxide_pdl/src/pdl/: mod.rs
chromiumoxide_types/: Cargo.toml
src/: browser.rs  conn.rs  layout.rs  lib.rs  page.rs
src/handler/: frame.rs  mod.rs  viewport.rs
