[package]
name = "chromiumoxide"
version = "0.7.0"
rust-version = "1.87"
authors = ["Matthias Seitz <matthias.seitz@outlook.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/mattsse/chromiumoxide"
repository = "https://github.com/mattsse/chromiumoxide"
description = "Library for interacting with a chrome instance with the chrome devtools protocol"
keywords = ["chrome", "chromedriver", "puppeteer", "automation"]
categories = ["web-programming", "api-bindings", "development-tools::testing"]

[dependencies]
async-tungstenite = "0.29.1"
serde = { version = "1.0.197", features = ["derive"] }
async-std = { version = "1.12.0", features = [
    "attributes",
    "unstable",
], optional = true }
futures = "0.3.31"
chromiumoxide_types = { path = "chromiumoxide_types", version = "0.7" }
chromiumoxide_cdp = { path = "chromiumoxide_cdp", version = "0.7" }
chromiumoxide_fetcher = { path = "chromiumoxide_fetcher", version = "0.7", default-features = false, optional = true }
serde_json = "1.0.114"
which = "8.0.0"
thiserror = "2.0.12"
url = "2.5.4"
base64 = "0.22.1"
fnv = "1.0.7"
futures-timer = "3.0.3"
cfg-if = "1.0.1"
tokio = { version = "1.37.0", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "fs",
    "macros",
    "process",
], optional = true }
tracing = "0.1.40"
pin-project-lite = "0.2.13"
dunce = "1.0.5"
bytes = { version = "1.5.0", features = ["serde"], optional = true }
reqwest = { version = "0.12.20", default-features = false }

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[dev-dependencies]
quote = "1.0.40"
proc-macro2 = "1.0.95"
chrono = "0.4.38"
tracing-subscriber = "0.3.18"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "time", "macros"] }
ureq = "3.0.12"

[features]
default = ["async-std-runtime", "bytes"]
async-std-runtime = ["async-std", "async-tungstenite/async-std-runtime"]
tokio-runtime = ["tokio", "async-tungstenite/tokio-runtime"]
fetcher = []
bytes = ["dep:bytes"]
serde0 = []

# Temporary features until cargo weak dependencies bug is fixed
# See https://github.com/rust-lang/cargo/issues/10801
_fetcher-rustls-async-std = [
    "fetcher",
    "chromiumoxide_fetcher/_rustls-async-std",
]
_fetcher-rusttls-tokio = ["fetcher", "chromiumoxide_fetcher/_rustls-tokio"]
_fetcher-native-async-std = [
    "fetcher",
    "chromiumoxide_fetcher/_native-async-std",
]
_fetcher-native-tokio = ["fetcher", "chromiumoxide_fetcher/_native-tokio"]

[[example]]
name = "wiki-tokio"
required-features = ["tokio-runtime"]

[[example]]
name = "iframe-workaround"
required-features = ["tokio-runtime", "tokio"]

[[example]]
name = "storage-cookie"
required-features = ["tokio-runtime"]

[[example]]
name = "console-logs"
required-features = ["tokio-runtime"]

[[example]]
name = "httpfuture"
required-features = ["tokio-runtime"]

[[example]]
name = "fetcher"
required-features = ["_fetcher-native-async-std"]

[[example]]
name = "fetcher-tokio"
required-features = ["tokio-runtime", "_fetcher-native-tokio"]

[workspace]
members = [
    "chromiumoxide_pdl",
    "chromiumoxide_types",
    "chromiumoxide_cdp",
    "chromiumoxide_fetcher",
]

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "2.0.12"
anyhow = "1.0.86"
either = "1.15.0"

# Async runtime dependencies
async-std = { version = "1.12.0", features = ["attributes", "unstable"] }
tokio = { version = "1.37.0", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "fs",
    "macros",
    "process",
] }
futures = "0.3.31"

# Web and networking
reqwest = { version = "0.12.20", default-features = false }
surf = { version = "2.3.2", default-features = false }
ureq = "3.0.12"

# File and system utilities
directories = "6.0.0"
os_info = { version = "3.12.0", default-features = false }
zip = { version = "4.2.0", default-features = false, features = ["deflate"] }
tempfile = "3.20.0"

# Parsing and code generation
regex = "1.11.1"
quote = "1.0.40"
proc-macro2 = "1.0.95"
heck = "0.5.0"
once_cell = "1.21.3"

# Development dependencies
chrono = "0.4.38"
tracing-subscriber = "0.3.18"
