[package]
name = "chromiumoxide_fetcher"
version = "0.7.0"
authors = ["Matthias Seitz <matthias.seitz@outlook.de>"]
edition = "2021"
rust-version = "1.87"
license = "MIT OR Apache-2.0"
description = "Contains a chromium fetcher"
homepage = "https://github.com/mattsse/chromiumoxide"
repository = "https://github.com/mattsse/chromiumoxide"
readme = "../README.md"
include = ["src/**/*", "LICENSE-*"]

[dev-dependencies]
ureq.workspace = true

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
directories = { workspace = true }
os_info = { workspace = true, default-features = false }
zip = { workspace = true, default-features = false, features = ["deflate"] }
async-std = { workspace = true, features = ["unstable"], optional = true }
tokio = { workspace = true, features = ["fs"], optional = true }
reqwest = { workspace = true, default-features = false, optional = true }
surf = { workspace = true, default-features = false, optional = true }

[features]
default = ["_native-async-std"]
async-std-runtime = ["async-std", "surf"]
tokio-runtime = ["tokio", "reqwest"]

_rustls-async-std = ["surf/h1-client-rustls", "async-std-runtime"]
_rustls-tokio = ["reqwest/rustls-tls", "tokio-runtime"]
_native-async-std = ["surf/h1-client", "async-std-runtime"]
_native-tokio = ["reqwest/native-tls", "tokio-runtime"]
